# EFHC

./: AGENTS.md
EFHC-Bot/: .env.neon.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
EFHC-Bot/.github/workflows/: cd-backend.yml  cd-frontend.yml  ci.yml
EFHC-Bot/backend/: run.py
EFHC-Bot/backend/app/: __init__.py  deps.py
EFHC-Bot/backend/app/bot/: bot.py  keyboards.py  middlewares.py  states.py  texts.py
EFHC-Bot/backend/app/core/: __init__.py  config_core.py  database_core.py  deps.py  errors_core.py  logging_core.py  security_core.py  system_locks.py  utils_core.py
EFHC-Bot/backend/app/crud/: __init__.py  lotteries_crud.py  (+8 more)
EFHC-Bot/backend/migrations/: env.py  script.py.mako
EFHC-Bot/backend/openapi/: openapi.json
EFHC-Bot/docs/: ADMIN_PANEL_SPEC.md  AI_SAFETY.md  API_GUIDE.md  ARCHITECTURAL_LOCKS.md  DB_SCHEMA.md  EFHC_CANON.md  ENERGY_RULES.md  RATING_RULES.md  REFERRALS_RULES.md  SCHEDULER_PLAYBOOK.md  TON_MEMO_SPEC.md
EFHC-Bot/docs/ADR/: 0001-db-choice-neon.md  0002-idempotency-readthrough.md  0003-per-sec-only.md
EFHC-Bot/docs/RUNBOOKS/: BANK_DEFICIT.md  INCIDENTS.md  RECONCILIATION.md
EFHC-Bot/frontend/: package.json
EFHC-Bot/ops/docker/: docker-compose.yml
EFHC-Bot/ops/k8s/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  secrets.example.yaml
EFHC-Bot/ops/monitoring/: prometheus.yml  sentry.example.yaml
EFHC-Bot/ops/render/: render.yaml
EFHC-Bot/ops/scripts/: bootstrap_neon.sql  export_openapi.py  recon_ton.py  seed_data.py
(+171 files in other folders)
